--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,27 @@
 body {
+    background-image: url("images/OfficeBackground.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     text-align: center;
     font-family: Arial, sans-serif;
-    background-color: #F6F6F6;
-    padding: 40px;
+    margin: 0;
+    padding-top: 70px;
+    background-color: #f5f5f5;
 }
 
 nav {
-    background-color: transparent;
-    margin-bottom: 40px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: white;
+    border-bottom: 1px solid #333;
+    padding: 10px 0;
+    z-index: 1000;
 }
 
 nav a {
+    margin: 0 10px;
     color: #4C7ABF;
     text-decoration: none;
     font-weight: bold;
@@ -18,29 +29,28 @@ nav a {
     text-transform: uppercase;
     transition: color 0.3s;
     display: block;
-    margin: 10px 0;
 }
 
 @media (min-width: 768px) {
     nav a {
-      /* Reset the display property for larger screens */
       display: inline;
       margin: 0 20px;
     }
-  }
+}
 
 nav a:hover {
     color: #2371B3;
 }
 
 main {
-    width: 90%;
-    max-width: 800px; /* Adjust the maximum width as needed */
     margin: 0 auto;
-    padding: 20px;
+    padding: 270px 20px 20px 20px;
+    width: 90%;
+    max-width: 800px;
     background-color: #FFFFFF;
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    z-index: 999;
 }
 
 h1 {
@@ -74,7 +84,18 @@ p {
     text-align: justify;
 }
 
+.section-link {
+    text-decoration: none; /* Removes underline from link */
+    color: inherit; /* Ensures the text color remains the same */
+    display: block; /* Makes the entire area clickable */
+}
+
+.section-link:hover {
+    cursor: pointer; /* Changes cursor to hand icon when hovering over the link */
+}
+
 #hero {
+    padding-top: 70px;
     background-color: #E6EDF8;
     padding: 40px;
     border-radius: 8px;
