--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,17 @@ p {
     text-align: justify;
 }
 
+ul {
+    list-style-position: inside;
+    padding-left: 0;
+    margin-left: 0;
+}
+
+li {
+    text-align: left;
+    margin-bottom: 10px;
+}
+
 .section-link {
     text-decoration: none; /* Removes underline from link */
     color: inherit; /* Ensures the text color remains the same */
@@ -94,10 +105,9 @@ p {
     cursor: pointer; /* Changes cursor to hand icon when hovering over the link */
 }
 
-#hero {
-    padding-top: 70px;
+#hero, #intro, #cookieTypes, #manageCookies, #cookieUpdates, #contactInfo {
+    padding: 70px 40px;
     background-color: #E6EDF8;
-    padding: 40px;
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     margin-bottom: 30px;
@@ -330,4 +340,42 @@ footer {
     line-height: 1.5;
     color: #333333;
     text-align: justify;
+}
+
+.cookie-popup {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(50,50,50,0.9); /* Softer black background */
+  color: #fff; /* White text */
+  padding: 20px;
+  box-sizing: border-box;
+  display: none;
+}
+
+.cookie-popup .cookie-content {
+  max-width: 900px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cookie-popup a {
+  color: #fff; /* White link color */
+}
+
+.cookie-button {
+  background-color: #00a800;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 0 2px;
+  cursor: pointer;
+  border-radius: 5px;
 }
